--- a/src/client/resources/dashboard.fxml
+++ b/src/client/resources/dashboard.fxml
@@ -2,40 +2,37 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox alignment="CENTER" spacing="10.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.DashboardController">
+<VBox id="dashboardscreen" alignment="CENTER" prefHeight="350.0" prefWidth="600.0" spacing="10.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.DashboardController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" />
     </padding>
-    <VBox alignment="CENTER">
-        <padding>
-            <Insets bottom="20.0" top="50.0" />
-        </padding>
-        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@assets/logo.png" />
-        </ImageView>
-    </VBox>
-    <Button fx:id="singleplayerBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startSinglegame" text="Single Player">
-        <font>
-          <Font name="Lato Black" size="18.0" />
-        </font>
-    </Button>
-    <Button fx:id="multiplayerBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startMultiplayer" text="Multi Player">
-        <font>
-          <Font name="Lato Black" size="18.0" />
-        </font>
-    </Button>
-   <Button fx:id="scores" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showScores" text="Scores">
-      <font>
-         <Font name="Lato Black" size="18.0" />
-      </font>
-   </Button>
-   <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#exit" text="Exit">
-      <font>
-         <Font name="Lato Black" size="18.0" />
-      </font>
-   </Button>
+   <VBox maxHeight="0.0" maxWidth="180.0" minWidth="0.0" prefHeight="0.0" prefWidth="180.0" spacing="10.0">
+      <children>
+          <Button fx:id="singleplayerBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startSinglegame" text="Single Player">
+              <font>
+                <Font name="Lato Black" size="18.0" />
+              </font>
+          </Button>
+          <Button fx:id="multiplayerBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startMultiplayer" text="Multi Player">
+              <font>
+                <Font name="Lato Black" size="18.0" />
+              </font>
+          </Button>
+         <Button fx:id="scores" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showScores" text="Scores">
+            <font>
+               <Font name="Lato Black" size="18.0" />
+            </font>
+         </Button>
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#exit" text="Exit">
+            <font>
+               <Font name="Lato Black" size="18.0" />
+            </font>
+         </Button>
+      </children>
+      <VBox.margin>
+         <Insets top="50.0" />
+      </VBox.margin>
+   </VBox>
 </VBox>
