--- a/src/client/resources/home.fxml
+++ b/src/client/resources/home.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.HomeController">
+<BorderPane id="homescreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.HomeController">
    <center>
-      <VBox alignment="CENTER" maxWidth="100.0" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+      <VBox alignment="CENTER" maxHeight="160.0" maxWidth="160.0" minWidth="-Infinity" prefHeight="150.0" prefWidth="160.0" spacing="10.0" BorderPane.alignment="TOP_CENTER">
          <Button maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#register" text="REGISTER">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -22,9 +22,12 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          </Button>
+         <BorderPane.margin>
+            <Insets top="30.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
    <top>
-      <fx:include source="logo.fxml"/>
+      <fx:include source="logo.fxml" />
    </top>
 </BorderPane>
