--- a/src/client/resources/scores.fxml
+++ b/src/client/resources/scores.fxml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ScoresController">
-    <VBox alignment="CENTER">
-        <padding>
-            <Insets top="30.0" />
-        </padding>
-        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@assets/logo.png" />
-        </ImageView>
-    </VBox>
-    <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<VBox id="scorescreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ScoresController">
+    <TableView id="tableview" fx:id="table">
       <columns>
-          <TableColumn editable="false" prefWidth="75.0" text="Username" />
-          <TableColumn editable="false" prefWidth="75.0" sortType="DESCENDING" text="Score" />
+         <TableColumn editable="false" maxWidth="50.0" prefWidth="50.0" text="Rank" />
+          <TableColumn editable="false" prefWidth="430.0" text="Username" />
+          <TableColumn editable="false" prefWidth="100.0" sortType="DESCENDING" text="Score" />
       </columns>
         <VBox.margin>
-          <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
+          <Insets bottom="10.0" left="10.0" right="10.0" top="100.0" />
         </VBox.margin>
+      <cursor>
+         <Cursor fx:constant="DEFAULT" />
+      </cursor>
     </TableView>
     <HBox alignment="CENTER">
         <VBox.margin>
