--- a/src/client/resources/serverConnection.fxml
+++ b/src/client/resources/serverConnection.fxml
@@ -6,46 +6,45 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<VBox alignment="CENTER" spacing="10.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/8.0.171"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ServerConnectionController">
+<VBox id="serverscreen" alignment="CENTER" spacing="10.0" stylesheets="@assets/main.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ServerConnectionController">
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
    <VBox alignment="CENTER">
       <padding>
-         <Insets top="50.0"/>
+         <Insets top="50.0" />
       </padding>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-         <Image url="@assets/logo.png"/>
+         <Image url="@assets/logo.png" />
       </ImageView>
    </VBox>
    <HBox spacing="10.0">
       <VBox.margin>
-         <Insets top="20.0"/>
+         <Insets top="20.0" />
       </VBox.margin>
       <VBox>
-         <Label text="Host"/>
+         <Label style="-fx-text-fill: white;" text="Host" />
          <TextField fx:id="hostField" promptText="Enter host..." text="127.0.0.1">
             <font>
-               <Font name="Lato-Light" size="18.0"/>
+               <Font name="Lato-Light" size="18.0" />
             </font>
          </TextField>
       </VBox>
       <VBox>
-         <Label text="Port"/>
+         <Label style="-fx-text-fill: white;" text="Port" />
          <TextField fx:id="portField" prefWidth="80.0" promptText="Enter port..." text="5656">
             <font>
-               <Font name="Lato-Light" size="18.0"/>
+               <Font name="Lato-Light" size="18.0" />
             </font>
          </TextField>
       </VBox>
    </HBox>
    <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Connect">
       <font>
-         <Font name="Lato Black" size="18.0"/>
+         <Font name="Lato Black" size="18.0" />
       </font>
       <VBox.margin>
-         <Insets bottom="15.0" top="30.0"/>
+         <Insets bottom="15.0" top="30.0" />
       </VBox.margin>
    </Button>
 </VBox>
